fixed z-index in submenu lg

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -355,10 +355,10 @@
         position: fixed;
         top: vert-heights(lg);
         font-size: font-sizes-lg(h3);
+        z-index: 20;
         ul {
           li {
             padding: 1.5rem 0vw 1.5rem 0vw;
-            border-bottom: 1px solid white;
             margin: 0 4vw 0 4vw;
           }
         }
