--- a/scss/main.css
+++ b/scss/main.css
@@ -413,6 +413,7 @@ table {
     position: fixed;
     top: 160px;
     font-size: 2.14vw;
+    z-index: 20;
   }
   .sub-menu .sub-menu-top-space {
     height: 30px;
@@ -426,7 +427,6 @@ table {
   }
   .sub-menu ul li {
     padding: 1.5rem 0vw 1.5rem 0vw;
-    border-bottom: 1px solid white;
     margin: 0 4vw 0 4vw;
   }
   .bg-illu {
